# 2024-2-craip

./: .gitattributes
devel/: .catkin
devel/include/custom_msgs/: ContourLabel.h  Detection.h  Detections.h
devel/include/hdl_global_localization/: QueryGlobalLocalizationRequest.h  QueryGlobalLocalizationResponse.h  SetGlobalLocalizationEngineRequest.h  SetGlobalLocalizationEngineResponse.h  SetGlobalMapRequest.h  SetGlobalMapResponse.h
devel/include/hdl_localization/: ScanMatchingStatus.h
devel/include/path_tracker/: mppi_paramConfig.h
devel/lib/dynamic_objects/: actor_follower_node  reset_go1.py
devel/lib/fast_gicp/: gicp_align  gicp_kitti
devel/lib/hdl_global_localization/: hdl_global_localization_node  hdl_global_localization_test
devel/lib/ndt_omp/: align
devel/lib/path_planner/: path_planner
devel/lib/path_tracker/: path_tracker_node
devel/lib/perception/: collision_detection  collision_detection_gazebo  yolo_consumer
devel/lib/pkgconfig/: custom_msgs.pc  dynamic_objects.pc  fast_gicp.pc  go1_description.pc  hdl_global_localization.pc  hdl_localization.pc  limbo.pc  llm.pc  ndt_omp.pc  path_planner.pc  path_tracker.pc  perception.pc  test_zone.pc  unitree_controller.pc  unitree_gazebo.pc  unitree_guide.pc  unitree_legged_control.pc  vlmaps.pc  (+4 more)
src/: version_test.py
src/custom_msgs/: CMakeLists.txt
src/perception/: CMakeLists.txt  package.xml
src/perception/src/: yolo_consumer.cpp  yolo_detection.py  yolo_wrapper.cpp  yolov5_detector.py
yolo_v5/exp12_robot_v3/: opt.yaml  results.csv
yolo_v5/exp13_robot_v3/: opt.yaml  results.csv
(+77 files in other folders)
